--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <i id="play" class="play-btn fa-solid fa-play"></i>
             <i id="next" class="next-btn fa-solid fa-forward"></i>
         </div>
+         <div class="copyrighted">
+            <H1>&copy; MUSTAFA</H1>
+       </div>
     </div>
 
 
