--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Mini Music Player</title>
+    <style>
+       h1{
+        text-align: center;
+        color: #fff;
+        font-weight: 300;
+        }
+    </style>
 </head>
 
 <body>
