--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Mini Music Player</title>
     <style>
-       H1{
+      .copyrighted H1{
         text-align: center;
         color: #fff;
         font-weight: 300;
